# cubeworld

./: CMakeLists.txt  Doxyfile.in  credits.txt  index.html  license.txt  readme.txt
cmake/: EnableExtraCompilerWarnings.cmake  FindPkgMacros.cmake  FindSDL2.cmake  SandboxBuildRules.cmake  config.cmake
extra/cmake/: FindGoogleTest.cmake  shared.cmake
extra/googletest/: googletestrunner.cpp
extra/googletest/include/: gtest.h
include/: basetypes_io.h  camera.h  coredefs.h  cubedata.h  cubemeshbuilder.h  cubeworld.h  gameapp.h  gameworld.h  geom.h  octreeworld.h  player.h  point.h  rogue.h  tools.h  worldcube.h  zone.h
include/renderers/: curses.h  opengl.h
libcommon/: CMakeLists.txt  changes.txt  libcommon.h  readme.txt  testrunner.cpp
libcommon/app/: CMakeLists.txt  app.cpp  app.h  debug.cpp  debug.h  globallog.cpp  log.cpp  logentry.cpp  logging.cpp  logging.h  logging_debugstreambuf.h  logging_debugstreambuf.inl  logging_stream.h  logstream.cpp  osplatform.h  platform.cpp  platform.h  platform_darwin.mm  platform_unix.cpp  platform_xp.cpp  windowsinclude.h
libcommon/common/: CMakeLists.txt  assert.cpp  assert.h  delete.h  deref.h  macros.h  noncopyable.h  scopedptr.h  singleton.h  time.cpp  time.h  utils.h
libcommon/common/tests/: test_assert.cpp  test_delete.cpp  test_deref.cpp  test_scopedptr.cpp  test_singleton.cpp  test_time.cpp  test_utils.cpp
libcommon/entity/: CMakeLists.txt  component.h  defs.h  entity.cpp  entity.h  entitymanager.cpp  entitymanager.h  reftag.h
libcommon/entity/tests/: components.cpp  components.h  test_entitymanager.cpp
libcommon/game2d/: CMakeLists.txt  fixedgrid.h  point.cpp  point.h  rect.h
libcommon/game2d/tests/: test_fixedgrid.cpp  test_point.cpp
libcommon/game3d/: CMakeLists.txt  boundingbox.cpp  boundingbox.h  camera.h  color.cpp  color.h  defs.h  fpscamera.h  frustum.cpp  frustum.h  geoms.cpp  intersection.h  intersectresult.cpp  plane.cpp  plane.h  primitives.h  ray.cpp  ray.h  sphere.h  utils.cpp  utils.h
libcommon/game3d/tests/: test_color.cpp  test_intersectionresult.cpp  test_ray.cpp
libcommon/math/: CMakeLists.txt  angle.h  config.h  config.h.in  constants.h  conversion.h  interpolation.h  matrix.h  matrixutils.h  perlin.cpp  perlin.h  quaternion.h  random.h  rect.h  tmatrix.h  util.h  utils.cpp  vector.cpp  vector.h
libcommon/math/tests/: test_angle.cpp  test_conversions.cpp  test_interpolation.cpp  test_matrix2.cpp  test_matrix4.cpp  test_matrixutils.cpp  test_quaternion.cpp  test_rect.cpp  test_utils.cpp  test_vector2.cpp  test_vector3.cpp  test_vector4.cpp
libcommon/platform/: CMakeLists.txt  darwin.cpp  linux.cpp  platform.cpp  platform.h  stacktrace.cpp  stacktrace.h  vista.cpp  xp.cpp
libcommon/string/: CMakeLists.txt  crc.cpp  crc.h  lcasts.h  loadfile.cpp  makestring.h  reftag.h  replace.cpp  sequenceformatter.h  streamprint.cpp  stringbuffer.h  tokenizer.cpp  tokenizer.h  transferstring.h  util.cpp  util.h
libcommon/string/tests/: test_lcasts.cpp  test_replace.cpp  test_streamprint.cpp  test_tokenizer.cpp  test_transferstring.cpp
libcommon/testing/: runner.cpp  testing.cpp  testing.h
libs/: CMakeLists.txt
libs/appcore/: CMakeLists.txt
libs/corelib/: CMakeLists.txt
libs/corelib/include/core/: logging.h
libs/corelib/src/: appcore.cpp
libs/math/: CMakeLists.txt
libs/math/include/: mathlib.h
libs/math/include/math/: color.h  frustum.h  geoms.h  mathdefs.h  mathio.h  matrix.h  point.h  vector.h
libs/math/src/: math.cpp
libs/math/tests/: test_point.cpp
libs/tga/: CMakeLists.txt
libs/tga/src/: tga.cpp
src/: CMakeLists.txt  camera.cpp  cubeworld.cpp  cubeworld.h  cubeworldbuilder.cpp  gameapp.cpp  gameapp.h  gameclient.cpp  gameclient.h  gameworld.cpp  linuxmain.cpp  resource.h  rogue.cpp  typesio.cpp  winmain.cpp
src/engine/: camera.cpp  camera.h  constants.cpp  constants.h  cubedata.cpp  cubedata.h  cubeintersection.h  gametime.h  intersection.cpp  material.cpp  material.h  point.cpp  point.h  world.cpp  world.h  worldchunk.cpp  worldchunk.h  worldcube.h
src/generation/: flatworldgenerator.cpp  flatworldgenerator.h  iworldgenerator.h
src/graphics/: cubevertex.h  irenderer.h  iwindow.cpp  iwindow.h  iworldview.h  renderprimitives.h  worldchunkbuilder.cpp  worldchunkbuilder.h  worldchunkmesh.h  worldview.cpp  worldview.h
src/graphics/directx/: dxaboutbox.cpp  dxaboutbox.h  dxrenderer.cpp  dxrenderer.h  dxwindow.cpp  dxwindow.h  dxworldview.cpp  dxworldview.h
src/graphics/null/: nullrenderer.cpp  nullrenderer.h  nullwindow.cpp  nullwindow.h  nullworldview.cpp  nullworldview.h
src/graphics/opengl/: renderer.cpp  renderer.h
src/renderers/: curses.cpp  opengl.cpp
src/tga/: license.txt
src/tga/include/: tga.h
src/world/: worldgenerator.cpp  worldgenerator.h
tests/: CMakeLists.txt  test_alwaystrue.cpp  test_flatworld.cpp  test_octreeworld.cpp  test_world.cpp  test_worldchunk.cpp
